--- a/clase4/dev/TODO
+++ b/clase4/dev/TODO
@@ -1,2 +1,3 @@
 * Barra lateral gris y barra de arriba azul fija (position: fixed)
 * Terminar estilos de tabla
+* Me gustaria ver el tema de la web donde se aglomere todo en algun momento (Web Machete)
